[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arcaea-offline"
version = "0.2.2"
authors = [{ name = "283375", email = "log_283375@163.com" }]
description = "Manage your local Arcaea score database."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "beautifulsoup4==4.12.2",
  "SQLAlchemy==2.0.20",
  "SQLAlchemy-Utils==0.41.1",
  "Whoosh==2.7.4",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["ruff~=0.4", "pre-commit~=3.3", "pytest~=7.4", "tox~=4.11"]

[project.urls]
"Homepage" = "https://github.com/283375/arcaea-offline"
"Bug Tracker" = "https://github.com/283375/arcaea-offline/issues"

[tool.pyright]
ignore = ["build/"]

[tool.ruff.lint]
# Full list: https://docs.astral.sh/ruff/rules
select = [
  "E",   # pycodestyle (Error)
  "W",   # pycodestyle (Warning)
  "F",   # pyflakes
  "I",   # isort
  "PL",  # pylint
  "N",   # pep8-naming
  "FBT", # flake8-boolean-trap
  "A",   # flake8-builtins
  "DTZ", # flake8-datetimez
  "LOG", # flake8-logging
  "Q",   # flake8-quotes
  "G",   # flake8-logging-format
  "PIE", # flake8-pie
  "PT",  # flake8-pytest-style
]
ignore = [
  "E501", # line-too-long
]
